--- a/src/app/pages/configuracion/configuracion.page.scss
+++ b/src/app/pages/configuracion/configuracion.page.scss
@@ -87,7 +87,7 @@ ion-content {
 }
 
 .donacion-fondo {
-  background: url('/assets/icon/wallpaper.png') center/cover no-repeat;
+  background: url('/assets/icon/planta.jpeg') center/cover no-repeat;
   padding: 24px;
   border-radius: 20px;
   min-height: 200px;
