--- a/src/app/pages/donaciones/donaciones.page.html
+++ b/src/app/pages/donaciones/donaciones.page.html
@@ -1,7 +1,4 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Donaciones</ion-title>
-  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-padding">
@@ -48,7 +45,7 @@
     <div class="qr-section">
       <h3 class="qr-title">Realizar Donación</h3>
       <div class="qr-container">
-        <img src="assets/img/Kanye.jpeg" alt="Código QR de donación" class="qr-image">
+        <img src="assets\icon\imagesdonaciones.jpeg" alt="Código QR de donación" class="qr-image">
       </div>
       <p class="qr-description">
         Escanee el código QR para realizar su donación de manera segura. 
