--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -163,3 +163,10 @@
 
   </div>
 </ion-content>
+
+  <!-- Botón flotante -->
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button color="success" (click)="irMenu()">
+      <ion-icon name="leaf-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
