--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,7 +11,7 @@
 
 /* This sets a different item border color for the default theme on ios and md */
 :root {
-  --background-dark: linear-gradient(to bottom, #0a2f26, #124a35, #1b684a, #2a9768, #3fbb85);
+  --background-dark: linear-gradient(to bottom,#061e19, #0a2f26, #124a35, #1b684a, #2a9768, #3fbb85);
   --background-light: linear-gradient(to bottom, #ffffff, #f0fbec, #e0f7d5, #c8f2b8, #aeea96);
   --text-dark: white;
   --text-light: black;
