--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -21,7 +21,7 @@
 <ion-content class="ion-padding">
   <!-- Saludo inicial -->
   <div *ngIf="mostrarEnPantalla" class="saludo">
-    <h1>Hola {{ nombre }}, como te puedo ayudar hoy</h1>
+    <h1>Hola {{ this.nombre }}, ¿cómo te puedo ayudar hoy?</h1>
   </div>
 
   <!-- Conversaciones agrupadas por fecha -->
